--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/header/menuItem.phtml
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/header/menuItem.phtml
@@ -8,7 +8,7 @@ $nameStr = ($block->getNameInLayout());
 $nameStrArr = explode(".", $nameStr);
 $name = $nameStrArr[2];
 
-$text = $block->getData("text.${name}");
+$text = $block->getData("text_${name}");
 ?>
 
 <li class="menu__item">
