--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/header/socialItem.phtml
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/header/socialItem.phtml
@@ -8,7 +8,7 @@ $nameStr = ($block->getNameInLayout());
 $nameStrArr = explode(".", $nameStr);
 $name = $nameStrArr[2];
 
-$url = $block->getData("${name}.href");
+$url = $block->getData("${name}_href");
 ?>
 
 <li class="socials__item">
