--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_layout.less
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_layout.less
@@ -76,7 +76,7 @@
     flex-direction: column;
     min-height: 550px;
     padding: 1.43em 1.43em 0 1.43em;
-    background: url(../img/features/pagination-mobile.svg) @light-gray no-repeat
+    background: url('@{baseDir}Magento_Theme::images/features/pagination-mobile.svg') @light-gray no-repeat
       left bottom;
 
     .responsive(@lg; {
@@ -84,7 +84,7 @@
       align-items: center;
       justify-content: space-between;
 
-      background: url(../img/features/pagination-desktop.svg) @light-gray no-repeat 1.43em bottom;
+      background: url('@{baseDir}Magento_Theme::images/features/pagination-mobile.svg') @light-gray no-repeat 1.43em bottom;
     });
 
     .responsive(@xxxl; {
