--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_typography.less
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_typography.less
@@ -61,14 +61,6 @@ button {
 	cursor: pointer;
 	margin: 0;
 	padding: 0;
-
-	// &:not(.primary) {
-	// 	box-shadow: none;
-
-	// 	&:active {
-	// 		box-shadow: none;
-	// 	}
-	// }
 }
 
 button,
@@ -77,4 +69,8 @@ a {
 		font-size: 1.5em;
 		pointer-events: none;
 	}
+}
+
+.page-main {
+	padding: 0;
 }
