--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/hero/slider.phtml
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/hero/slider.phtml
@@ -7,7 +7,7 @@ use Magento\Framework\View\Element\Template;
 
 <div class="hero__slider slider">
   <div class="slider__line">
-    <img class="slider__img" src="<?= $block->getViewFileUrl('Magento_Theme::images/hero-girl-1.png'); ?>" alt="girl-1" />
+    <img class="slider__img" src="<?= $block->getViewFileUrl('Magento_Theme::images/backgrounds/hero-girl-1.png'); ?>" alt="girl-1" />
     <img class="slider__img" src="<?= $block->getViewFileUrl('Magento_Theme::images/backgrounds/hero-girl-2.png'); ?>" alt="girl-2" />
     <img class="slider__img" src="<?= $block->getViewFileUrl('Magento_Theme::images/backgrounds/hero-girl-3.png'); ?>" alt="girl-3" />
     <img class="slider__img" src="<?= $block->getViewFileUrl('Magento_Theme::images/backgrounds/hero-boy-1.png'); ?>" alt="boy-1" />
