--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/header/contactContent.phtml
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/header/contactContent.phtml
@@ -1,3 +1,19 @@
+<?php
+
+use Magento\Framework\View\Element\Template;
+
+/** @var Template $block */
+
+$nameStr = ($block->getNameInLayout());
+$nameStrArr = explode(".", $nameStr);
+$tagName = $nameStrArr[0];
+?>
+
 <p class="contact__text">Need help? Contact us now:</p>
 <a class="contact__number" href="tel:01-234-567">01 234 567</a>
-<button class="language">EN</button>
+
+<?php if ($tagName === "header") : ?>
+  <button class="language">EN</button>
+<?php elseif ($tagName === "footer") : ?>
+  <button class="contact__btn btn">Call now</button>
+<?php endif; ?>
