--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_layout.less
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_layout.less
@@ -76,7 +76,7 @@
     flex-direction: column;
     min-height: 550px;
     padding: 1.43em 1.43em 0 1.43em;
-    background: url('@{baseDir}images/features/pagination-mobile.svg') @light-gray no-repeat
+    background: url('/media/wysiwyg/features/pagination-mobile.png') @light-gray no-repeat
       left bottom;
 
     .responsive(@lg; {
@@ -84,7 +84,7 @@
       align-items: center;
       justify-content: space-between;
 
-      background: url('@{baseDir}images/features/pagination-desktop.svg') @light-gray no-repeat 1.43em bottom;
+      background: url('/media/wysiwyg/features/pagination-desktop.png') @light-gray no-repeat 1.43em bottom;
     });
 
     .responsive(@xxxl; {
@@ -291,7 +291,7 @@
 
   &__banner {
     &--discount {
-      background: url(../img/backgrounds/discount-bg.png) rgba(41, 23, 98, 0.7)
+      background: url(/media/wysiwyg/backgrounds/discount-bg.png) rgba(41, 23, 98, 0.7)
         no-repeat center right;
       background-size: contain;
 
@@ -308,7 +308,7 @@
         // grid-row: 1 / 3;
         grid-row-start: 1;
         grid-row-end: 3;
-        background-image: url(../img/backgrounds/discount-bg-desktop.png);
+        background-image: url(/media/wysiwyg/backgrounds/discount-bg-desktop.png);
         border-radius: 0 0 5em 0;
         transform: scaleX(-1);
         width: 100%;
@@ -321,7 +321,7 @@
     }
 
     &--for-men {
-      background: url(../img/backgrounds/for-men-bg.png) rgba(3, 19, 61, 0.7)
+      background: url(/media/wysiwyg/backgrounds/for-men-bg.png) rgba(3, 19, 61, 0.7)
         no-repeat;
       background-size: contain;
 
@@ -347,7 +347,7 @@
     }
 
     &--dress-collection {
-      background: url(../img/backgrounds/dresses-collection-bg.png)
+      background: url(/media/wysiwyg/backgrounds/dresses-collection-bg.png)
         rgba(78, 39, 82, 0.7) no-repeat center right;
       background-size: contain;
 
@@ -381,6 +381,7 @@
     .responsive(@lg; {
       margin: 0 0 1.5em 0;
       min-width: 40em; 
+      align-self: center;
     });
 
     .responsive(@xl; {
@@ -434,14 +435,14 @@
 
 .subscribe {
   .wrapper();
-  background: url(../img/backgrounds/subscribe-mobile-bg.jpg) no-repeat;
+  background: url('/media/wysiwyg/backgrounds/subscribe-mobile-bg.jpg') no-repeat;
   background-size: cover;
   margin-bottom: 5em;
 
   .responsive(@lg; {
     font-size: 16px;
     height: 28.75em;
-    background-image: url(../img/backgrounds/subscribe-desktop-bg.jpg);
+    background-image: url('/media/wysiwyg/backgrounds/subscribe-desktop-bg.jpg');
     display: flex;
     justify-content: space-between;
     align-items: center;
