--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/helper/menuItem.phtml
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/templates/html/helper/menuItem.phtml
@@ -20,5 +20,5 @@ $text = $block->getData("text_${name}");
 ?>
 
 <li class="<?= "${parent}__item"; ?>">
-  <a href="#" class="<?= "${parent}__link"; ?>"><?= $text; ?></a>
+  <a href="#" class="<?= "${parent}__link"; ?> role='menuItem'"><?= $text; ?></a>
 </li>
