--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_components.less
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_components.less
@@ -515,6 +515,7 @@
   }
 }
 
+.action.primary,
 .btn {
   background-color: @blue;
   color: @white;
@@ -626,7 +627,7 @@
   }
 
   &__link {
-    padding: 1.07em 0 2.07em;
+    padding: 1.07em 0 1.8em;
     text-decoration: none;
 
     &:focus {
@@ -826,27 +827,45 @@
       });
   }
 
+  // .product-item-info {
+  //   max-width: initial;
+  // }
+
+  // .product-image-photo,
+  // &__img {
+  //   padding: 0.5em;
+  //   object-fit: contain;
+  //   vertical-align: top;
+  //   margin: 0;
+
+  //   .responsive(@sm; {
+  //     padding: 1em;
+  //   });
+  // }
+
+  // .product-image-container,
+  // .product-image-photo,
   &__img {
     height: 145px;
-    width: 145px;
+    width: 145px !important;
     object-fit: contain;
     vertical-align: top;
     padding: 0.5em;
 
     .responsive(@sm; {
         height: 200px;
-        width: 200px;
+        width: 200px !important;
         padding: 1em;
       });
 
     .responsive(@md; {
         height: 250px;
-        width: 250px;
+        width: 250px !important;
       });
 
     .responsive(@lg; {
         height: 320px;
-        width: 320px;
+        width: 320px !important;
       });
   }
 
