--- a/app/design/frontend/ExampleSite/luma/Magento_CatalogWidget/templates/product/widget/content/grid.phtml
+++ b/app/design/frontend/ExampleSite/luma/Magento_CatalogWidget/templates/product/widget/content/grid.phtml
@@ -15,7 +15,7 @@ use Magento\Framework\App\Action\Action;
 <?php if ($exist = ($block->getProductCollection() && $block->getProductCollection()->getSize())) : ?>
   <?php
   // $type = 'gallery__wrapper';
-  $type = 'widget-product-grid';
+  $type = 'widget-product-grid gallery__wrapper';
 
   $mode = 'grid';
 
@@ -40,8 +40,8 @@ use Magento\Framework\App\Action\Action;
         <ol class="product-items <?= /* @noEscape */ $type ?>">
           <?php $iterator = 1; ?>
           <?php foreach ($items as $_item) : ?>
-            <?= /* @noEscape */ ($iterator++ == 1) ? '<li class="product-item">' : '</li><li class="product-item">' ?>
-            <div class="product-item-info">
+            <?= /* @noEscape */ ($iterator++ == 1) ? '<li class="product-item gallery__product" style="width: 100%;height: 100%;margin-left: 0;">' : '</li><li class="product-item gallery__product" style="width: 100%;height: 100%;margin-left: 0;">' ?>
+            <div class="product-item-info" style="max-width: initial">
               <a href="<?= $block->escapeUrl($block->getProductUrl($_item)) ?>" class="product-item-photo">
                 <?= $block->getImage($_item, $image)->toHtml() ?>
               </a>
