--- a/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_typography.less
+++ b/app/design/frontend/ExampleSite/luma/Magento_Theme/web/css/source/_typography.less
@@ -72,7 +72,6 @@ button {
 	}
 
 	&:focus {
-		// background-color: inherit;
 		border: none;
 	}
 }
@@ -89,66 +88,9 @@ img {
 	max-width: initial;
 }
 
-.page-main {
-	.wrapper();
-	// padding: 0;
-	margin: 0;
-	max-width: initial;
-}
-
-.page-wrapper>.page-bottom {
-	margin: 0;
-	padding: 0;
-	max-width: initial;
-}
-
-.block-static-block.widget {
-	margin-bottom: 0;
-}
-
-.copyright {
-	background-color: @blue;
-}
-
-.footer .nav-toggle {
-	display: none;
-}
-
-.navigation {
-	background-color: @white;
-	border-bottom: 1px solid @gray;
-	display: flex;
-	padding: 0 1.07rem 0 1.07rem;
-	max-width: initial;
-
-	.responsive(@xxl; {
-		padding: 1.07rem 12.86rem;
-	});
-
-	ul {
-		padding: 0;
+.action.primary {
+	&focus,
+	&:hover {
+		border: none;
 	}
-}
-
-.ui-menu {
-	padding: 0;
-	display: flex;
-	// gap: 2em;
-
-	// .ui-menu-item-wrapper {
-	// 	padding: 0;
-	// 	border-color: @blue;
-	// }
-}
-
-.navigation .level0>.level-top {
-	padding: 0;
-}
-
-.navigation .level0.active > .level-top {
-	border-color: @blue;
-}
-
-.navigation .level0 {
-	margin-right: 2em;
 }
